UNIT_AUTO = \
	unit-test-secmem.c \
	unit-test-unique.c \
	unit-test-crypto.c \
	unit-test-async.c \
	unit-test-cleanup.c \
	unit-test-location.c \
	unit-test-location-watch.c \
	unit-test-signal.c

UNIT_PROMPT = 

UNIT_LIBS =  \
	$(top_builddir)/common/libgkr-common.la

include $(top_srcdir)/tests/test.make
